config-root/namespaces/jx-production/jx3-demoapp5/jx3-demoapp5-jx3-demoapp5-deploy.yaml
# Source: jx3-demoapp5/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jx3-demoapp5-jx3-demoapp5
  labels:
    draft: draft-app
    chart: "jx3-demoapp5-0.0.32"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-production
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: jx3-demoapp5-jx3-demoapp5
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: jx3-demoapp5-jx3-demoapp5
    spec:
      serviceAccountName: jx3-demoapp5-jx3-demoapp5
      containers:
        - name: jx3-demoapp5
          image: "image-registry.openshift-image-registry.svc:5000/jx/jx3-demoapp5:0.0.32"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
