config-root/namespaces/jx-production/jx3-demoapp5/jx3-demoapp5-ingress.yaml
# Source: jx3-demoapp5/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jx3-demoapp5
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: jx3-demoapp5
              servicePort: 80
      host: jx3-demoapp5-jx-production.apps.os.swe-test.aws.myriad.com
